--- a/jclassifiers/build.gradle
+++ b/jclassifiers/build.gradle
@@ -15,7 +15,7 @@ apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 
-version = '0.0.12-SNAPSHOT'
+version = '0.0.13'
 sourceCompatibility = 1.8
 
 repositories {
