--- a/jclassifiers/src/main/resources/application.yml
+++ b/jclassifiers/src/main/resources/application.yml
@@ -1,4 +1,5 @@
 
+spring.profiles.active: production
 
 spring.datasource.url: jdbc:h2:./db/classifiers-db;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.username: sa
