--- a/jclassifiers/src/main/resources/application.yml
+++ b/jclassifiers/src/main/resources/application.yml
@@ -1,13 +1,27 @@
 
-spring.profiles.active: production
+spring.profiles.active: development
 
 spring.datasource.url: jdbc:h2:./db/classifiers-db;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.username: sa
 spring.datasource.password:
 spring.datasource.driverClassName: org.h2.Driver
-spring.jpa.hibernate.ddl-auto: validate
+spring.jpa.database-platform: org.hibernate.dialect.H2Dialect
 
 # Max file size.
 spring.http.multipart.max-file-size: 1Mb
 # Max request size.
 spring.http.multipart.max-request-size: 10Mb
+
+
+#security.user.name: bioplat
+#security.user.password: Bi0plat
+#management.security.roles: SUPERUSER
+management.security.enabled: false
+
+---
+spring.profiles: production
+spring.jpa.hibernate.ddl-auto: validate
+---
+spring.profiles: development
+spring.jpa.hibernate.ddl-auto: create-drop
+
