--- a/jclassifiers/src/main/resources/application.yml
+++ b/jclassifiers/src/main/resources/application.yml
@@ -1,6 +1,5 @@
 
 spring.profiles.active: development
-
 spring.datasource.url: jdbc:h2:./db/classifiers-db;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.username: sa
 spring.datasource.password:
@@ -13,6 +12,10 @@ spring.http.multipart.max-file-size: 1Mb
 spring.http.multipart.max-request-size: 10Mb
 
 
+logging.level:
+  org.springframework.web: DEBUG
+  org.apache.tomcat: DEBUG
+
 #security.user.name: bioplat
 #security.user.password: Bi0plat
 #management.security.roles: SUPERUSER
@@ -20,6 +23,7 @@ management.security.enabled: false
 
 ---
 spring.profiles: production
+
 spring.jpa.hibernate.ddl-auto: validate
 ---
 spring.profiles: development
