password como parámetros: deploymentPassword las invocaciones a gradle que tengan que ver con acceso al repositorio se deben realizar agregando el parámetros mencionado:   ./gradlew publish -PdeploymentPassword=<password>

--- a/jclassifiers/publishing.gradle
+++ b/jclassifiers/publishing.gradle
@@ -6,13 +6,13 @@ task sourceJar(type: Jar) {
 
 publishing {
   repositories{
+    //TODO  bioplatRepository()
     maven{    
-      //TODO bioplatRepository()
       url "http://192.155.227.67:8081/nexus/content/repositories/bioplat-release-candidates/"
         credentials() {
           username "deployment"
-            password "Deployment.1"
-        }
+          password deploymentPassword
+       }
     }
   }
   publications {
