--- a/jclassifiers/repositories.gradle
+++ b/jclassifiers/repositories.gradle
@@ -3,7 +3,7 @@ repositories.ext.bioplatRepository = {
         url "http://192.155.227.67:8081/nexus/content/repositories/bioplat-release-candidates/"
         credentials() {
             username "deployment"
-            password "Deployment.1"
+            password deploymentPassword
         }
     }
 }
