--- a/jclassifiers/publishing.gradle
+++ b/jclassifiers/publishing.gradle
@@ -1,5 +1,11 @@
 apply plugin: 'maven-publish'
 
+buildscript {
+  ext {
+    deploymentPassword=project.properties['deploymentPassword'] ?: "no_pass_provided"
+  }
+}
+
 task sourceJar(type: Jar) {
     from sourceSets.main.allJava
 }
