--- a/jclassifiers/build.gradle
+++ b/jclassifiers/build.gradle
@@ -16,7 +16,7 @@ apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 apply from: 'publishing.gradle'
 
-version = '0.0.20'
+version = '0.0.20-rc.1'
 sourceCompatibility = 1.8
 
 repositories {
