--- a/jclassifiers/build.gradle
+++ b/jclassifiers/build.gradle
@@ -1,13 +1,13 @@
 buildscript {
- ext {
-  springBootVersion = '1.5.7.RELEASE'
- }
- repositories {
-  mavenCentral()
- }
- dependencies {
-  classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
- }
+    ext {
+        springBootVersion = '1.5.7.RELEASE'
+    }
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+    }
 }
 apply from: 'repositories.gradle'
 apply plugin: 'java'
@@ -20,34 +20,34 @@ version = '0.0.20-rc.1'
 sourceCompatibility = 1.8
 
 repositories {
- mavenCentral()
- bioplatRepository()
+    mavenCentral()
+    bioplatRepository()
 }
 
 dependencies {
- compile('org.springframework.boot:spring-boot-starter-data-jpa')
- compile('org.springframework.boot:spring-boot-starter-web')
+    compile 'org.springframework.boot:spring-boot-starter-data-jpa'
+    compile 'org.springframework.boot:spring-boot-starter-web'
 
- runtime 'org.springframework.boot:spring-boot-devtools'
- runtime 'org.springframework.boot:spring-boot-starter-actuator'
- //runtime 'org.springframework.boot:spring-boot-starter-security'
+    runtime 'org.springframework.boot:spring-boot-devtools'
+    runtime 'org.springframework.boot:spring-boot-starter-actuator'
+    //runtime 'org.springframework.boot:spring-boot-starter-security'
 
- runtime group: 'com.h2database', name: 'h2'
+    runtime 'com.h2database:h2'
 
- compile 'org.apache.httpcomponents:httpclient:4.5.3'
- compile 'org.apache.httpcomponents:fluent-hc:4.5.3'
+    compile 'org.apache.httpcomponents:httpclient:4.5.3'
+    compile 'org.apache.httpcomponents:fluent-hc:4.5.3'
 
- compile 'com.fasterxml.jackson.core:jackson-annotations'
- compile 'com.google.guava:guava:23.0'
+    compile 'com.fasterxml.jackson.core:jackson-annotations'
+    compile 'com.google.guava:guava:23.0'
 
- testCompile('org.springframework.boot:spring-boot-starter-test')
+    testCompile 'org.springframework.boot:spring-boot-starter-test'
 
 }
 
 
 bootRun {
-  // support passing -Dsystem.property=value to bootRun task
-  systemProperties = System.properties
+    // support passing -Dsystem.property=value to bootRun task
+    systemProperties = System.properties
 }
 
 task wrapper(type: Wrapper) {
