--- a/jclassifiers/build.gradle
+++ b/jclassifiers/build.gradle
@@ -16,7 +16,7 @@ apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 apply from: 'publishing.gradle'
 
-version = '0.0.20-rc.1'
+version = '0.1.0'
 sourceCompatibility = 1.8
 
 repositories {
@@ -33,6 +33,8 @@ dependencies {
     //runtime 'org.springframework.boot:spring-boot-starter-security'
 
     runtime 'com.h2database:h2'
+
+    compile 'org.liquibase:liquibase-core:3.5.3'
 
     compile 'org.apache.httpcomponents:httpclient:4.5.3'
     compile 'org.apache.httpcomponents:fluent-hc:4.5.3'
