defino volumen para la base de datos

--- a/docker-classifiers/Dockerfile
+++ b/docker-classifiers/Dockerfile
@@ -20,6 +20,8 @@ copy rclassifiers/main.r /srv/main.r
 
 add classifiers/ /srv/classifiers/
 
+volume /classifiers/db/
+
 #Ejecuto el servicio de R que ejecuta las funciones
 #TODO revisar si es necesario o dejar el default que no define pr como global
 #ENTRYPOINT ["R", "-e", "pr <<- plumber::plumb(commandArgs()[4]); pr$run(host='0.0.0.0', port=8000)"]
