--- a/jclassifiers/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/jclassifiers/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -5,3 +5,6 @@ databaseChangeLog:
   - include:
       file: 20171022-default-data.sql
       relativeToChangelogFile: true
+  - include:
+      file: 20180218-comment-on-column.sql
+      relativeToChangelogFile: true
